Teacher profile and Vote screen

--- a/FMIRAtingsAndroid/res/values/strings.xml
+++ b/FMIRAtingsAndroid/res/values/strings.xml
@@ -16,6 +16,13 @@
 
     <!-- Comments -->
     <string name="add_commnet">Добави коментар</string>
+    <string name="clarity">Яснота</string>
+    <string name="enthusiasm">Ентусиазъм</string>
+	<string name="evaluation">Оценяване</string>
+	<string name="speed">Скорост на преподавяне</string>
+	<string name="scope">Обхват на материала</string>
+	<string name="comment">Коментар</string>
+	<string name="vote">Гласувай</string>
     <string name="add_rating">Вашият кометар и оценка са много важни за нас. така се следи кой курсове са най-полезни и посещавани.</string>
     
     <!-- Login/Register -->
@@ -31,7 +38,10 @@
     <string name="group">Група</string>
     <string name="graduation_date">Дата на завършване</string>
     <string name="title_activity_login">LoginActivity</string>
-
+	<string name="department">Катедра</string>
+	<string name="courses">Курсове</string>
+	<string name="comments">Коментари</string>
+	<string name="category">Категория</string>
     
     <!-- Teachers -->
 </resources>
