Added TeachersFragment for listing teachers TeachersNameAdapter - not in use Added listners in CourseFragment for new buttons - Teachers, Comments, Votes

--- a/FMIRAtingsAndroid/res/values/strings.xml
+++ b/FMIRAtingsAndroid/res/values/strings.xml
@@ -53,4 +53,8 @@
 	<string name="category">Категория</string>
     
     <!-- Teachers -->
+    <!-- Course -->
+    <string name="teachers">Учители</string>
+   	
+    
 </resources>
