--- a/FMIRAtingsAndroid/res/values/strings.xml
+++ b/FMIRAtingsAndroid/res/values/strings.xml
@@ -56,6 +56,6 @@
     <!-- Teachers -->
     <!-- Course -->
     <string name="teachers">Учители</string>
-   	
+   	<string name="materials">Материали</string>
     
 </resources>
